# oclock-tray

./: Cargo.toml  build.rs
src/: idle.rs  main.rs  slintui.rs  tray.rs
src/client/: mod.rs
src/client/oclock/: client.rs
src/client/oclock/dto/: state.rs
ui/: idle-time-dialog.slint  new-task.slint
