[package]
name = "oclock-tray"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
ksni = "0.2.2"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dependencies.oclock]
path = "../oclock"
version = "0.1.10"
features = ["client"]
