[package]
name = "oclock-tray"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
ksni = "0.2.2"
slint = "1.6"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
futures = "0.3.30"
nng = "1.0.1"
tokio = { version = "1.39.2", features = ["rt", "macros"] }

wayrs-client = "1.1.1"
wayrs-protocols = { version = "0.14.1", features = ["ext-idle-notify-v1"] }
wayrs-utils = { version = "0.15.1", features = ["seats"] }

[dependencies.oclock]
# path = "../oclock"
version = "0.1.11"
features = ["client"]

[build-dependencies]
slint-build = "1.6"
